Attempt to fix full height nav, fix extra scrollbars when too short

--- a/packages/tapisui-common/src/components/files/FileListing/FileListing.module.scss
+++ b/packages/tapisui-common/src/components/files/FileListing/FileListing.module.scss
@@ -1,12 +1,7 @@
 .file-list,
 .file-list-select {
-  overflow-y: hidden;
-  max-height: inherit;
   td > a {
     width: initial;
-  }
-  tbody {
-    height: inherit;
   }
 }
 
