--- a/packages/tapisui-common/src/ui/PageLayout/PageLayout.module.scss
+++ b/packages/tapisui-common/src/ui/PageLayout/PageLayout.module.scss
@@ -10,6 +10,10 @@
 .top {
   display: block;
   width: 100%;
+  flex-shrink: 0;
+  overflow-x: auto;
+  overflow-y: hidden;
+  min-width: 0;
 }
 
 .right {
@@ -22,7 +26,8 @@
 .main {
   width: 100%;
   flex: 1;
-  overflow: hidden;
+  overflow-x: auto;
+  overflow-y: hidden;
   display: flex;
   flex-direction: column;
 }
@@ -37,7 +42,8 @@
   display: flex;
   flex-direction: row;
   flex: 1;
-  overflow: hidden;
+  overflow-x: auto;
+  overflow-y: hidden;
   min-height: 0;
 }
 
